style(ui): color and spacing adjustments

--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -15,7 +15,7 @@
   data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
   data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-  class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 dark:shadow-none dark:border-slate-700"
+  class="card"
 >
   <div class="flex flex-wrap gap-4 items-center justify-between">
     <div class="max-w-md">
