--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -1,9 +1,9 @@
 @layer components {
   .sidebar-link {
-    @apply rounded-lg px-3 py-2.5 focus:text-indigo-600 text-soft hover:text-normal text-sm font-medium hover:bg-slate-200/60 dark:hover:bg-slate-700/40 transition duration-200 ease-in-out dark:focus:text-white flex items-center gap-2.5;
+    @apply rounded-lg px-3 py-2 dark:py-[0.5625rem] focus:text-indigo-600 text-soft hover:text-normal text-sm font-medium hover:bg-slate-200/40 dark:hover:bg-slate-700/40 transition duration-200 ease-in-out dark:focus:text-white flex items-center gap-2.5 border border-transparent dark:border-none;
 
     &.sidebar-link-active {
-      @apply text-normal bg-white border dark:border-none shadow dark:shadow-none dark:bg-slate-700/75 hover:bg-white dark:hover:bg-slate-700/75 text-indigo-500 dark:text-normal;
+      @apply text-normal bg-slate-200/75 dark:bg-slate-700/75 hover:bg-slate-200 dark:hover:bg-slate-700/75 border-slate-300/50;
     }
   }
 
@@ -28,7 +28,7 @@
   }
 
   .tab-container {
-    @apply flex items-center bg-slate-100 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm z-30 snap-x hide-scrollbar;
+    @apply flex items-center bg-slate-200 dark:bg-slate-800 p-0.5 rounded-lg overflow-x-auto whitespace-nowrap max-w-max backdrop-blur-sm z-30 snap-x hide-scrollbar;
   }
 
   .tab-container-scroll-left {
