--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <%= render 'layouts/head' %>
   </head>
 
-  <body class='relative antialiased font-normal leading-normal bg-white text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 dark:bg-slate-900'>
+  <body class='relative antialiased font-normal leading-normal bg-slate-50 text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 dark:bg-slate-900'>
     <%= render 'shared/flash' %>
     <div class="flex w-full h-svh max-h-svh">
       <%= render 'shared/sidebar' if user_signed_in? %>
