--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -160,7 +160,7 @@
     <button type="button" data-action="restore-defaults#restore" class="btn btn-sm btn-destructive btn-muted ml-auto">Reset settings</button>
   </div>
 
-  <div class="md:sticky bottom-0 flex items-center gap-4 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
+  <div class="md:sticky bottom-0 flex items-center gap-4 pt-6 pb-6 bg-slate-50 border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
     <%= button_tag 'Save settings', type: 'submit', class: 'btn btn-primary', name: 'commit_action', value: 'save_settings', data: { turbo: false } %>
     <%= link_to 'Cancel', :back, class: 'btn btn-dark btn-muted', data: { turbo: false } %>
   </div>
