--- a/app/views/pinned_pages/_list.html.erb
+++ b/app/views/pinned_pages/_list.html.erb
@@ -35,6 +35,6 @@
       <% end %>
     </nav>
   <% else %>
-    <p class="text-soft text-center text-xs mt-1">You have not pinned any pages yet.</p>
+    <p class="text-soft text-center text-xs mt-1">You have not pinned any shortcuts yet.</p>
   <% end %>
 <% end %>
