refactor(streaks): refactor streak calculations
- Refactor streak calculation logic in `UserCalculations` concern
  - Iterate by dates, instead of by runs
  - Improve performance by using a single query for all runs
  - Remove `*_streak_without_team` methods by making team argument optional in `*_streak` methods
- Rename some auxilary methods to be more descriptive
  - User `longest_streak` to `record_streak`
  - Team `include_in_streak?` to `include_date_in_streak?`
  - Team `exclude_from_streak?` to `exclude_date_from_streak?`
  - Run `long_run_for_?` to `long_run_for_team?`

--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -86,7 +86,7 @@
 
       <% streak = run.streak_value(local_assigns[:team]) %>
       <div class="flex flex-wrap items-center gap-2">
-        <%= render 'runs/long_run_badge' if run.long_run_for?(local_assigns[:team]) %>
+        <%= render 'runs/long_run_badge' if run.long_run_for_team?(local_assigns[:team]) %>
         <%= render 'runs/streak_badge', streak: streak unless streak.nil? || streak.zero? || streak.negative? || streak == 1 %>
       </div>
     </div>
