--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -82,7 +82,7 @@
             <%= data[:current_streak] %> <span class="font-sans text-xs"><%= 'day'.pluralize(data[:current_streak]) %></span>
           </td>
           <td class="px-6 py-4 font-mono">
-            <%= data[:longest_streak] %> <span class="font-sans text-xs"><%= 'day'.pluralize(data[:longest_streak]) %></span>
+            <%= data[:record_streak] %> <span class="font-sans text-xs"><%= 'day'.pluralize(data[:record_streak]) %></span>
           </td>
         </tr>
       <% end %>
