--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Current Streak Card -->
-    <% current_streak_data = user.current_streak_without_team %>
+    <% current_streak_data = user.current_streak %>
     <% current_streak = current_streak_data[:streak] %>
     <% current_streak_start_date = current_streak_data[:start_date] %>
     <% current_streak_end_date = current_streak_data[:end_date] %>
@@ -51,25 +51,25 @@
     </div>
 
     <!-- Record Streak Card -->
-    <% longest_streak_data = user.longest_streak_without_team %>
-    <% longest_streak = longest_streak_data[:streak] %>
-    <% longest_streak_start_date = longest_streak_data[:start_date] %>
-    <% longest_streak_end_date = longest_streak_data[:end_date] %>
+    <% record_streak_data = user.record_streak %>
+    <% record_streak = record_streak_data[:streak] %>
+    <% record_streak_start_date = record_streak_data[:start_date] %>
+    <% record_streak_end_date = record_streak_data[:end_date] %>
 
     <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Record Streak</h2>
       <p class="text-3xl font-bold">
-        <%= longest_streak %>
-        <span class="text-base font-normal text-soft"><%= 'day'.pluralize(longest_streak) %></span>
+        <%= record_streak %>
+        <span class="text-base font-normal text-soft"><%= 'day'.pluralize(record_streak) %></span>
       </p>
       <p class="my-1 text-soft">
-        <% if longest_streak.zero? %>
-          No longest streak recorded.
-        <% elsif longest_streak_start_date == longest_streak_end_date %>
-          <%= pretty_date(longest_streak_start_date, date_style: :relative) %>
+        <% if record_streak.zero? %>
+          No record streak recorded.
+        <% elsif record_streak_start_date == record_streak_end_date %>
+          <%= pretty_date(record_streak_start_date, date_style: :relative) %>
           <span class="my-1 ml-1 help-text">(Most recent run)</span>
         <% else %>
-          <%= pretty_date(longest_streak_start_date, date_style: :relative) %> &ndash; <%= pretty_date(longest_streak_end_date, date_style: :relative) %>
+          <%= pretty_date(record_streak_start_date, date_style: :relative) %> &ndash; <%= pretty_date(record_streak_end_date, date_style: :relative) %>
         <% end %>
       </p>
     </div>
