--- a/app/views/teams/show/_recent_activity.html.erb
+++ b/app/views/teams/show/_recent_activity.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading">Recent Activity</h1>
   <p class="text-soft">Recent runs by members of this team.</p>
 </div>
